--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,7 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #7c9b9c !important; }
+html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #455858 !important; }
 
 a { color: #4bbaff !important; }
 
@@ -433,11 +433,11 @@ a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
 .site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
 
-.site-nav { background-color: #7c9b9c; border-color: #8ea9aa; }
+.site-nav { background-color: #455858; border-color: #5f6f6f; }
 
-* { scrollbar-color: #7c9b9c #8ea9aa; }
+* { scrollbar-color: #455858 #5f6f6f; }
 
-pre, code { border-color: #8ea9aa; background-color: #83a0a1; }
+pre, code { border-color: #5f6f6f; background-color: #4e6060; }
 
 .page-description { color: rgba(255, 255, 255, 0.69); }
 
@@ -445,19 +445,19 @@ pre, code { border-color: #8ea9aa; background-color: #83a0a1; }
 
 .post-content p, .post-content li { color: rgba(255, 255, 255, 0.69); }
 
-.btn { background-color: #83a0a1 !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #8ea9aa !important; }
+.btn { background-color: #4e6060 !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #5f6f6f !important; }
 
-.btn:hover { background-color: #7c9b9c !important; }
+.btn:hover { background-color: #455858 !important; }
 
-table th { background-color: #83a0a1; border-color: #8ea9aa; color: rgba(255, 255, 255, 0.87); }
+table th { background-color: #4e6060; border-color: #5f6f6f; color: rgba(255, 255, 255, 0.87); }
 
-table td { background-color: #7c9b9c; border-color: #8ea9aa; color: rgba(255, 255, 255, 0.69); }
+table td { background-color: #455858; border-color: #5f6f6f; color: rgba(255, 255, 255, 0.69); }
 
-.flash { color: #7c9b9c !important; filter: brightness(80%); }
+.flash { color: #455858 !important; filter: brightness(80%); }
 
 canvas { filter: invert(100%); }
 
-.post-list > li > div { box-shadow: none !important; background-color: #83a0a1; border: none !important; }
+.post-list > li > div { box-shadow: none !important; background-color: #4e6060; border: none !important; }
 
 li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
 
